<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SecondFragment">

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/tab_text_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/position_parameters_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:text="@string/position_parameters_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position_parameters_label" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textSize="15sp"
        android:singleLine="true"
        app:layout_constraintLeft_toRightOf="@+id/name_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_label"
        app:layout_constraintBottom_toBottomOf="@+id/name_label" />

    <TextView
        android:id="@+id/one_meter_rssi_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/one_meter_rssi_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <EditText
        android:id="@+id/one_meter_rssi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:singleLine="true"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/one_meter_rssi_label"
        app:layout_constraintRight_toLeftOf="@+id/n_value_label"
        app:layout_constraintTop_toTopOf="@+id/one_meter_rssi_label"
        app:layout_constraintBottom_toBottomOf="@+id/one_meter_rssi_label" />

    <TextView
        android:id="@+id/n_value_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/n_value_label"
        app:layout_constraintLeft_toRightOf="@+id/one_meter_rssi_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/one_meter_rssi_label" />

    <EditText
        android:id="@+id/n_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textSize="15sp"
        android:singleLine="true"
        app:layout_constraintLeft_toRightOf="@+id/n_value_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/n_value_label"
        app:layout_constraintBottom_toBottomOf="@+id/n_value_label" />

    <Button
        android:id="@+id/position_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:textSize="18sp"
        android:text="@string/position_button_start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_value_label" />

</androidx.constraintlayout.widget.ConstraintLayout>