<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/name_label"
        app:layout_constraintBottom_toBottomOf="@+id/name_label" />

    <TextView
        android:id="@+id/rssi_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/rssi_label"
        app:layout_constraintLeft_toLeftOf="@+id/name_label"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />
    <TextView
        android:id="@+id/rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/rssi_label"
        app:layout_constraintBottom_toBottomOf="@+id/rssi_label" />

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/address_label"
        app:layout_constraintLeft_toLeftOf="@+id/rssi_label"
        app:layout_constraintTop_toBottomOf="@+id/rssi_label" />
    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/address_label"
        app:layout_constraintBottom_toBottomOf="@+id/address_label" />

</androidx.constraintlayout.widget.ConstraintLayout>